--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "react-virtualized": "^9.22.3",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
